--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@
 }
 
 body {
-    background: #0c1022;
+    background: rgb(18, 16, 16);
     color: #fff;
 }
 
 .navbar {
-    background: #0c1022;
+    background: rgb(18, 16, 16);
     position:sticky;
     top: 0;
     left: 0;
@@ -436,7 +436,7 @@ body {
 .education-1{
     border-radius: 15px;
     padding: 15px 30px;
-    background-color: #161d41;
+    background-color: rgb(0, 0, 0);
     margin-bottom: 15px;
     border-left: 10px solid #f06;
     transition: 0.7s;
@@ -489,7 +489,7 @@ body {
 .icons i{
     font-size: 2.2rem;
     padding: 15px 15px;
-    background: linear-gradient(to bottom, #172050, #f06);
+    background: #f06;
     border-radius: 20px;
     color: #fff;
     transition: 0.7s;
@@ -497,6 +497,7 @@ body {
 
 .icons i:hover{
     color: #fff;
+    background-color: #22aaff;
     padding: 20px 20px;
 }
 
@@ -531,7 +532,7 @@ form input, form textarea{
     width: 100%;
     border: none;
     outline: none;
-    background: #182043;
+    background: rgb(0, 0, 0);
     padding: 15px;
     margin: 15px 0;
     color: #fff;
@@ -577,13 +578,13 @@ form button:hover{
 
 .question a{
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 600;
     color: #fff;
     padding: 10px 15px;
-    border-radius: 15px;
+    border-radius: 5px;
     border: none;
-    background: linear-gradient(to bottom, #172050, #f06);
+    background: #f06;
     transition: 1s;
 }
 
@@ -608,7 +609,7 @@ form button:hover{
     font-size: 1.2rem;
     padding: 10px 10px;
     border-radius: 10px;
-    background-color:#172050;
+    background-color: rgb(0, 0, 0);
     transition: 1s;
     margin-left: 15px;
 }
